--- a/2.html
+++ b/2.html
@@ -1,22 +1,1 @@
-hello word!
-<<<<<<< HEAD
-HElloe word
- helloe js
-Hello
-hellasd
-as
-da
-sd
-asd
-asd
-=======
-1
-1
-1
-1
-1
-1
-1
-1
->>>>>>> 1
-
+master
